# CasparCG-Server-MAV-Edition

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: linux-system.yml  linux.yml  windows.yml
docs/dev-tasks/: 01_linux-compatibility.md  02_nvjpeg-implementation.md
src/: CMakeLists.txt
src/core/frame/: frame.cpp  frame.h
src/modules/: CMakeLists.txt
src/modules/ffmpeg/producer/: ffmpeg_producer.cpp
src/modules/ffmpeg/util/: av_util.cpp
src/modules/replay/: CMakeLists.txt  FILE.md  README.md  replay.cpp  replay.h
src/modules/replay/consumer/: replay_consumer.cpp  replay_consumer.h
src/modules/replay/producer/: nvof_interpolator.h  replay_producer.cpp  replay_producer.h
src/modules/replay/util/: file_operations.cpp  file_operations.h  frame_operations.cpp  frame_operations.h  jpeg_codec.h  jpeg_codec_cpu.cpp  jpeg_codec_nvjpeg.cpp
tools/linux/: Dockerfile  install-dependencies
tools/linux/deb/debian-sid/debian/: control
tools/windows/: build.bat
